--- a/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
@@ -7,156 +7,156 @@
 			@Material
 			{
 				// Resize
-				@groundTexStart *= #$../../PlanetDimensions[0]$
-				@groundTexEnd *= #$../../PlanetDimensions[0]$
-				@steepTexStart *= #$../../PlanetDimensions[0]$
-				@steepTexEnd *= #$../../PlanetDimensions[0]$
+				@groundTexStart *= #$../../SigmaDimensions/Resize$
+				@groundTexEnd *= #$../../SigmaDimensions/Resize$
+				@steepTexStart *= #$../../SigmaDimensions/Resize$
+				@steepTexEnd *= #$../../SigmaDimensions/Resize$
 				// landscape
-				@groundTexStart *= #$../../PlanetDimensions[5]$
-				@groundTexEnd *= #$../../PlanetDimensions[5]$
-				@steepTexStart *= #$../../PlanetDimensions[5]$
-				@steepTexEnd *= #$../../PlanetDimensions[5]$
+				@groundTexStart *= #$../../SigmaDimensions/landscape$
+				@groundTexEnd *= #$../../SigmaDimensions/landscape$
+				@steepTexStart *= #$../../SigmaDimensions/landscape$
+				@steepTexEnd *= #$../../SigmaDimensions/landscape$
 			}
 			@FallbackMaterial
 			{
 				// Resize
-				@groundTexStart *= #$../../PlanetDimensions[0]$
-				@groundTexEnd *= #$../../PlanetDimensions[0]$
+				@groundTexStart *= #$../../SigmaDimensions/Resize$
+				@groundTexEnd *= #$../../SigmaDimensions/Resize$
 				// landscape
-				@groundTexStart *= #$../../PlanetDimensions[5]$
-				@groundTexEnd *= #$../../PlanetDimensions[5]$
+				@groundTexStart *= #$../../SigmaDimensions/landscape$
+				@groundTexEnd *= #$../../SigmaDimensions/landscape$
 			}
 			@Mods
 			{
 				@VertexSimplexHeightAbsolute,*
 				{
 					// Resize
-					@deformity *= #$../../../PlanetDimensions[0]$
+					@deformity *= #$../../../SigmaDimensions/Resize$
 					// landscape
-					@deformity *= #$../../../PlanetDimensions[5]$
+					@deformity *= #$../../../SigmaDimensions/landscape$
 				}
 				@VertexHeightNoiseVertHeightCurve2,*
 				{
 					// Resize
-					@deformity *= #$../../../PlanetDimensions[0]$
-					@simplexHeightEnd *= #$../../../PlanetDimensions[0]$
-					@simplexHeightStart *= #$../../../PlanetDimensions[0]$
+					@deformity *= #$../../../SigmaDimensions/Resize$
+					@simplexHeightEnd *= #$../../../SigmaDimensions/Resize$
+					@simplexHeightStart *= #$../../../SigmaDimensions/Resize$
 					// landscape
-					@deformity *= #$../../../PlanetDimensions[5]$
-					@simplexHeightEnd *= #$../../../PlanetDimensions[5]$
-					@simplexHeightStart *= #$../../../PlanetDimensions[5]$
+					@deformity *= #$../../../SigmaDimensions/landscape$
+					@simplexHeightEnd *= #$../../../SigmaDimensions/landscape$
+					@simplexHeightStart *= #$../../../SigmaDimensions/landscape$
 				}
 				@VertexRidgedAltitudeCurve,*
 				{
 					// Resize
-					@deformity *= #$../../../PlanetDimensions[0]$
-					@simplexHeightEnd *= #$../../../PlanetDimensions[0]$
-					@simplexHeightStart *= #$../../../PlanetDimensions[0]$
+					@deformity *= #$../../../SigmaDimensions/Resize$
+					@simplexHeightEnd *= #$../../../SigmaDimensions/Resize$
+					@simplexHeightStart *= #$../../../SigmaDimensions/Resize$
 					// landscape
-					@deformity *= #$../../../PlanetDimensions[5]$
-					@simplexHeightEnd *= #$../../../PlanetDimensions[5]$
-					@simplexHeightStart *= #$../../../PlanetDimensions[5]$
+					@deformity *= #$../../../SigmaDimensions/landscape$
+					@simplexHeightEnd *= #$../../../SigmaDimensions/landscape$
+					@simplexHeightStart *= #$../../../SigmaDimensions/landscape$
 				}
 				@LandControl,*
 				{
-					@vHeightMax *= #$../../../PlanetDimensions[0]$
-					@vHeightMax *= #$../../../PlanetDimensions[5]$
+					@vHeightMax *= #$../../../SigmaDimensions/Resize$
+					@vHeightMax *= #$../../../SigmaDimensions/landscape$
 					@landClasses,*
 					{
 						@Class,*
 						{
 							// Resize
-							@alterApparentHeight *= #$../../../../../PlanetDimensions[0]$
-							@alterRealHeight *= #$../../../../../PlanetDimensions[0]$
+							@alterApparentHeight *= #$../../../../../SigmaDimensions/Resize$
+							@alterRealHeight *= #$../../../../../SigmaDimensions/Resize$
 							// landscape
-							@alterApparentHeight *= #$../../../../../PlanetDimensions[5]$
-							@alterRealHeight *= #$../../../../../PlanetDimensions[5]$
+							@alterApparentHeight *= #$../../../../../SigmaDimensions/landscape$
+							@alterRealHeight *= #$../../../../../SigmaDimensions/landscape$
 						}
 					}
 					@scatters,*
 					{
 						@Scatter,*
 						{
-							@maxLevelOffset *= #$../../../../../PlanetDimensions2[0]$
-							@maxScale *= #$../../../../../PlanetDimensions2[0]$
-							@minScale *= #$../../../../../PlanetDimensions2[0]$
-							@verticalOffset *= #$../../../../../PlanetDimensions2[0]$
-							@densityFactor *= #$../../../../../PlanetDimensions2[1]$
+							@maxLevelOffset *= #$../../../../../changeScatterSize$
+							@maxScale *= #$../../../../../changeScatterSize$
+							@minScale *= #$../../../../../changeScatterSize$
+							@verticalOffset *= #$../../../../../changeScatterSize$
+							@densityFactor *= #$../../../../../changeScatterDensity$
 						}
 					}
 				}
 				@AerialPerspectiveMaterial,*
 				{
-					@atmosphereDepth *= #$../../../PlanetDimensions[0]$
+					@atmosphereDepth *= #$../../../SigmaDimensions/Resize$
 				}
 				@VertexHeightMap,*
 				{
 					// Resize
-					@deformity *= #$../../../PlanetDimensions[0]$
-					@offset *= #$../../../PlanetDimensions[0]$
+					@deformity *= #$../../../SigmaDimensions/Resize$
+					@offset *= #$../../../SigmaDimensions/Resize$
 				}
 				@VertexHeightMap:HAS[~ignorelandscape[True]]
 				{
 					// landscape
-					@deformity *= #$../../../PlanetDimensions[5]$
-					@offset *= #$../../../PlanetDimensions[5]$
+					@deformity *= #$../../../SigmaDimensions/landscape$
+					@offset *= #$../../../SigmaDimensions/landscape$
 				}
 				@AltitudeAlpha,*
 				{
-					@atmosphereDepth *= #$../../../PlanetDimensions[0]$
+					@atmosphereDepth *= #$../../../SigmaDimensions/Resize$
 				}
 				@VertexSimplexHeight,*
 				{
 					// Resize
-					@deformity *= #$../../../PlanetDimensions[0]$
+					@deformity *= #$../../../SigmaDimensions/Resize$
 					// landscape
-					@deformity *= #$../../../PlanetDimensions[5]$
+					@deformity *= #$../../../SigmaDimensions/landscape$
 				}
 				@VertexHeightNoiseVertHeight,*
 				{
 					// Resize
-					@deformity *= #$../../../PlanetDimensions[0]$
+					@deformity *= #$../../../SigmaDimensions/Resize$
 					// landscape
-					@deformity *= #$../../../PlanetDimensions[5]$
+					@deformity *= #$../../../SigmaDimensions/landscape$
 				}
 				@VertexPlanet,*
 				{
 					// Resize
-					@deformity *= #$../../../PlanetDimensions[0]$
-					@colorDeformity *= #$../../../PlanetDimensions[0]$
+					@deformity *= #$../../../SigmaDimensions/Resize$
+					@colorDeformity *= #$../../../SigmaDimensions/Resize$
 					// landscape
-					@deformity *= #$../../../PlanetDimensions[5]$
-					@colorDeformity *= #$../../../PlanetDimensions[5]$
+					@deformity *= #$../../../SigmaDimensions/landscape$
+					@colorDeformity *= #$../../../SigmaDimensions/landscape$
 				}
 				@VertexHeightNoise,*
 				{
 					// Resize
-					@deformity *= #$../../../PlanetDimensions[0]$
+					@deformity *= #$../../../SigmaDimensions/Resize$
 					// landscape
-					@deformity *= #$../../../PlanetDimensions[5]$
+					@deformity *= #$../../../SigmaDimensions/landscape$
 				}
 				@FlattenArea,*
 				{
 					// Resize
-					@flattenTo *= #$../../../PlanetDimensions[0]$
-					@innerRadius *= #$../../../PlanetDimensions[0]$
-					@outerRadius *= #$../../../PlanetDimensions[0]$
+					@flattenTo *= #$../../../SigmaDimensions/Resize$
+					@innerRadius *= #$../../../SigmaDimensions/Resize$
+					@outerRadius *= #$../../../SigmaDimensions/Resize$
 					// landscape
-					@flattenTo *= #$../../../PlanetDimensions[5]$
+					@flattenTo *= #$../../../SigmaDimensions/landscape$
 				}
 				@VertexSimplexHeightMap,*
 				{
 					// Resize
-					@deformity *= #$../../../PlanetDimensions[0]$
+					@deformity *= #$../../../SigmaDimensions/Resize$
 					// landscape
-					@deformity *= #$../../../PlanetDimensions[5]$
+					@deformity *= #$../../../SigmaDimensions/landscape$
 				}
 				@VertexHeightOffset,*
 				{
 					// Resize
-					@offset *= #$../../../PlanetDimensions[0]$
+					@offset *= #$../../../SigmaDimensions/Resize$
 					// landscape
-					@offset *= #$../../../PlanetDimensions[5]$
+					@offset *= #$../../../SigmaDimensions/landscape$
 				}
 				@VoronoiCraters:HAS[~deformation[*]]
 				{
@@ -169,102 +169,102 @@
 				@VoronoiCraters,*
 				{
 					// Resize
-					@deformation *= #$../../../PlanetDimensions[0]$
-					@jitterHeight *= #$../../../PlanetDimensions[0]$
+					@deformation *= #$../../../SigmaDimensions/Resize$
+					@jitterHeight *= #$../../../SigmaDimensions/Resize$
 					// landscape
-					@deformation *= #$../../../PlanetDimensions[5]$
-					@jitterHeight *= #$../../../PlanetDimensions[5]$
+					@deformation *= #$../../../SigmaDimensions/landscape$
+					@jitterHeight *= #$../../../SigmaDimensions/landscape$
 				}
 				@VertexVoronoi,*
 				{
 					// Resize
-					@deformation *= #$../../../PlanetDimensions[0]$
+					@deformation *= #$../../../SigmaDimensions/Resize$
 					// landscape
-					@deformation *= #$../../../PlanetDimensions[5]$
+					@deformation *= #$../../../SigmaDimensions/landscape$
 				}
 				@MapDecalTangent,*
 				{
 					// Resize
-					@absoluteOffset *= #$../../../PlanetDimensions[0]$
-					@heightMapDeformity *= #$../../../PlanetDimensions[0]$
-					@radius *= #$../../../PlanetDimensions[0]$
+					@absoluteOffset *= #$../../../SigmaDimensions/Resize$
+					@heightMapDeformity *= #$../../../SigmaDimensions/Resize$
+					@radius *= #$../../../SigmaDimensions/Resize$
 					// landscape
-					@absoluteOffset *= #$../../../PlanetDimensions[5]$
-					@heightMapDeformity *= #$../../../PlanetDimensions[5]$
+					@absoluteOffset *= #$../../../SigmaDimensions/landscape$
+					@heightMapDeformity *= #$../../../SigmaDimensions/landscape$
 				}
 				@MapDecal,*
 				{
 					// Resize
-					@absoluteOffset *= #$../../../PlanetDimensions[0]$
-					@heightMapDeformity *= #$../../../PlanetDimensions[0]$
-					@radius *= #$../../../PlanetDimensions[0]$
+					@absoluteOffset *= #$../../../SigmaDimensions/Resize$
+					@heightMapDeformity *= #$../../../SigmaDimensions/Resize$
+					@radius *= #$../../../SigmaDimensions/Resize$
 					// landscape
-					@absoluteOffset *= #$../../../PlanetDimensions[5]$
-					@heightMapDeformity *= #$../../../PlanetDimensions[5]$
+					@absoluteOffset *= #$../../../SigmaDimensions/landscape$
+					@heightMapDeformity *= #$../../../SigmaDimensions/landscape$
 				}
 				@VertexHeightOblate,*
 				{
 					// Resize
-					@height *= #$../../../PlanetDimensions[0]$
+					@height *= #$../../../SigmaDimensions/Resize$
 				}
 				@VertexHeightOblate:HAS[~ignorelandscape[True]]
 				{
 					// landscape
-					@height *= #$../../../PlanetDimensions[5]$
+					@height *= #$../../../SigmaDimensions/landscape$
 				}
 				@FlattenMountains,*
 				{
 					// Resize
-					@altitude *= #$../../../PlanetDimensions[0]$
+					@altitude *= #$../../../SigmaDimensions/Resize$
 					// landscape
-					@altitude *= #$../../../PlanetDimensions[5]$
+					@altitude *= #$../../../SigmaDimensions/landscape$
 				}
 				@FlattenOcean,*
 				{
 					// Resize
-					@oceanRadius *= #$../../../PlanetDimensions[0]$
+					@oceanRadius *= #$../../../SigmaDimensions/Resize$
 					// landscape
-					@oceanRadius *= #$../../../PlanetDimensions[5]$
+					@oceanRadius *= #$../../../SigmaDimensions/landscape$
 				}
 				@VertexDefineCoastLine,*
 				{
 					// Resize
-					@depthOffset *= #$../../../PlanetDimensions[0]$
-					@oceanRadiusOffset *= #$../../../PlanetDimensions[0]$
+					@depthOffset *= #$../../../SigmaDimensions/Resize$
+					@oceanRadiusOffset *= #$../../../SigmaDimensions/Resize$
 					// landscape
-					@depthOffset *= #$../../../PlanetDimensions[5]$
-					@oceanRadiusOffset *= #$../../../PlanetDimensions[5]$
+					@depthOffset *= #$../../../SigmaDimensions/landscape$
+					@oceanRadiusOffset *= #$../../../SigmaDimensions/landscape$
 				}
 				@VertexHeightMapStep,*
 				{
 					// Resize
-					@deformity *= #$../../../PlanetDimensions[0]$
-					@offset *= #$../../../PlanetDimensions[0]$
+					@deformity *= #$../../../SigmaDimensions/Resize$
+					@offset *= #$../../../SigmaDimensions/Resize$
 					// landscape
-					@deformity *= #$../../../PlanetDimensions[5]$
-					@offset *= #$../../../PlanetDimensions[5]$
+					@deformity *= #$../../../SigmaDimensions/landscape$
+					@offset *= #$../../../SigmaDimensions/landscape$
 				}
 				@VertexHeightNoiseHeightMap,*
 				{
 					// Resize
-					@deformity *= #$../../../PlanetDimensions[0]$
-					@heightEnd *= #$../../../PlanetDimensions[0]$
-					@heightStart *= #$../../../PlanetDimensions[0]$
+					@deformity *= #$../../../SigmaDimensions/Resize$
+					@heightEnd *= #$../../../SigmaDimensions/Resize$
+					@heightStart *= #$../../../SigmaDimensions/Resize$
 					// landscape
-					@deformity *= #$../../../PlanetDimensions[5]$
-					@heightEnd *= #$../../../PlanetDimensions[5]$
-					@heightStart *= #$../../../PlanetDimensions[5]$
+					@deformity *= #$../../../SigmaDimensions/landscape$
+					@heightEnd *= #$../../../SigmaDimensions/landscape$
+					@heightStart *= #$../../../SigmaDimensions/landscape$
 				}
 				@VertexHeightNoiseVertHeightCurve,*
 				{
 					// Resize
-					@deformity *= #$../../../PlanetDimensions[0]$
-					@heightEnd *= #$../../../PlanetDimensions[0]$
-					@heightStart *= #$../../../PlanetDimensions[0]$
+					@deformity *= #$../../../SigmaDimensions/Resize$
+					@heightEnd *= #$../../../SigmaDimensions/Resize$
+					@heightStart *= #$../../../SigmaDimensions/Resize$
 					// landscape
-					@deformity *= #$../../../PlanetDimensions[5]$
-					@heightEnd *= #$../../../PlanetDimensions[5]$
-					@heightStart *= #$../../../PlanetDimensions[5]$
+					@deformity *= #$../../../SigmaDimensions/landscape$
+					@heightEnd *= #$../../../SigmaDimensions/landscape$
+					@heightStart *= #$../../../SigmaDimensions/landscape$
 				}
 			}
 		}
