--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -4,16 +4,16 @@
 	{
 		@Properties
 		{
-			@timewarpAltitudeLimits,0[*, ] *= #$../PlanetDimensions[2]$
-			@inverseRotThresholdAltitude *= #$../PlanetDimensions[2]$
+			@timewarpAltitudeLimits,0[*, ] *= #$../SigmaDimensions/Atmosphere$
+			@inverseRotThresholdAltitude *= #$../SigmaDimensions/Atmosphere$
 		}
 	}
 	@Body:HAS[!Atmosphere]
 	{
 		@Properties
 		{
-			@timewarpAltitudeLimits,0[*, ] *= #$../PlanetDimensions[0]$
-			@inverseRotThresholdAltitude *= #$../PlanetDimensions[0]$
+			@timewarpAltitudeLimits,0[*, ] *= #$../SigmaDimensions/Resize$
+			@inverseRotThresholdAltitude *= #$../SigmaDimensions/Resize$
 		}
 	}
 	@Body,*
@@ -27,40 +27,40 @@
 		}
 		@Properties
 		{
-			@radius *= #$../PlanetDimensions[0]$
-			@geeASL *= #$../PlanetDimensions[4]$
-			@rotationPeriod *= #$../PlanetDimensions[3]$
-			@sphereOfInfluence *= #$../PlanetDimensions[8]$
+			@radius *= #$../SigmaDimensions/Resize$
+			@geeASL *= #$../SigmaDimensions/geeASLmultiplier$
+			@rotationPeriod *= #$../SigmaDimensions/dayLengthMultiplier$
+			@sphereOfInfluence *= #$../SigmaDimensions/CustomSoISize$
 			@ScienceValues
 			{
-				@flyingAltitudeThreshold *= #$../../PlanetDimensions[2]$
-				@spaceAltitudeThreshold *= #$../../PlanetDimensions[1]$
+				@flyingAltitudeThreshold *= #$../../SigmaDimensions/Atmosphere$
+				@spaceAltitudeThreshold *= #$../../SigmaDimensions/Rescale$
 				@spaceAltitudeThreshold -= #$../radius$
 			}
 		}
 		@Orbit
 		{
-			@semiMajorAxis *= #$../PlanetDimensions[1]$
+			@semiMajorAxis *= #$../SigmaDimensions/Rescale$
 		}
 		@ScaledVersion
 		{
 			@Light
 			{
-				@sunAU *= #$../../PlanetDimensions[0]$
+				@sunAU *= #$../../SigmaDimensions/Resize$
 			}
 		}
 		@Rings
 		{
 			@Ring
 			{
-				@outerRadius *= #$../../PlanetDimensions[9]$
-				@innerRadius *= #$../../PlanetDimensions[9]$
+				@outerRadius *= #$../../SigmaDimensions/CustomRingSize$
+				@innerRadius *= #$../../SigmaDimensions/CustomRingSize$
 			}
 		}
 		@SpaceCenter
 		{
-			%Resize = #$../PlanetDimensions[0]$
-			%landscape = #$../PlanetDimensions[5]$
+			%Resize = #$../SigmaDimensions/Resize$
+			%landscape = #$../SigmaDimensions/landscape$
 			@heightMapDeformity *= 0.9255
 			@absoluteOffset += #$heightMapDeformity$
 			@absoluteOffset *= #$Resize$
@@ -86,7 +86,7 @@
 			{
 				@MapDecalTangent
 				{
-					%Resize = #$../../../PlanetDimensions[0]$
+					%Resize = #$../../../SigmaDimensions/Resize$
 					@radius /= #$Resize$
 				}
 				@MapDecalTangent:HAS[#Resize[<0.75],#Resize[>0.009]]
