--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setKSCSwitcher.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setKSCSwitcher.cfg
@@ -6,8 +6,8 @@
 		{
 			@PQSMod_MapDecalTangent
 			{
-				%Resize = #$@Kopernicus/Body:HAS[#name[Kerbin]]/PlanetDimensions[0]$
-				%landscape = #$@Kopernicus/Body:HAS[#name[Kerbin]]/PlanetDimensions[5]$
+				%Resize = #$@Kopernicus/Body:HAS[#name[Kerbin]]/SigmaDimensions/Resize$
+				%landscape = #$@Kopernicus/Body:HAS[#name[Kerbin]]/SigmaDimensions/landscape$
 				@heightMapDeformity *= 0.9255
 				@absoluteOffset += #$heightMapDeformity$
 				@absoluteOffset *= #$Resize$
