--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Kerbin/Kerbin_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Kerbin/Kerbin_Values.cfg
@@ -47,7 +47,7 @@
 				{
 					&deformity = 485
 				}
-				%VertexHeightNoiseVertHeightCurve2[KSC]
+				%VertexHeightNoiseVertHeightCurve2[_HeightNoise]
 				{
 					&deformity = 4000
 					&simplexHeightEnd = 4600
