--- a/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
@@ -77,11 +77,11 @@
 					{
 						@Scatter,*
 						{
-							@maxLevelOffset *= #$../../../../../changeScatterSize$
-							@maxScale *= #$../../../../../changeScatterSize$
-							@minScale *= #$../../../../../changeScatterSize$
-							@verticalOffset *= #$../../../../../changeScatterSize$
-							@densityFactor *= #$../../../../../changeScatterDensity$
+							@maxLevelOffset *= #$../../../../../SigmaDimensions/changeScatterSize$
+							@maxScale *= #$../../../../../SigmaDimensions/changeScatterSize$
+							@minScale *= #$../../../../../SigmaDimensions/changeScatterSize$
+							@verticalOffset *= #$../../../../../SigmaDimensions/changeScatterSize$
+							@densityFactor *= #$../../../../../SigmaDimensions/changeScatterDensity$
 						}
 					}
 				}
