--- a/GameData/Sigma/Dimensions/Configs/ReDimension/newCacheFiles.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/newCacheFiles.cfg
@@ -1,4 +1,4 @@
-@Kopernicus:FOR[SigDim2]
+﻿@Kopernicus:FOR[SigDim2]
 {
 	@Body:HAS[@SigmaDimensions:HAS[#Resize[1],#landscape[1]]]
 	{
@@ -10,7 +10,7 @@
 	}
 	@Body:HAS[~editCache[False]]
 	{
-		@cacheFile = #Sigma/Dimensions/Cache/§$PlanetDimensions[0]$x]Resize/§$PlanetDimensions[5]$x]landscape/$cacheFile$
+		@cacheFile = #Sigma/Dimensions/Cache/§$SigmaDimensions/Resize$x]Resize/§$SigmaDimensions/landscape$x]landscape/$cacheFile$
 		@cacheFile ^= :§:[:
 	}
 	@Body,*
