--- a/GameData/Sigma/Dimensions/Configs/Bodies/Fixes/caseSensitivityFix.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Fixes/caseSensitivityFix.cfg
@@ -48,6 +48,13 @@
 					@ignorelandscape ^= :U:u:
 					@ignorelandscape ^= :E:e:
 				}
+				@VertexHeightOblate,*
+				{
+					@ignorelandscape ^= :t:T:
+					@ignorelandscape ^= :R:r:
+					@ignorelandscape ^= :U:u:
+					@ignorelandscape ^= :E:e:
+				}
 			}
 		}
 	}
