--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Vall/Vall_DeletedMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Vall/Vall_DeletedMods.cfg
@@ -8,6 +8,8 @@
 			{
 				%removePQSMods = #,$../../Template/removePQSMods$,
 				@removePQSMods ^= /[\[\]']+/§
+				@removePQSMods ^= : ::   // space
+				@removePQSMods ^= :	::   // tabulation
 				
 				// Remove names of unique PQSMods
 				@removePQSMods ^= :,PQSMod_VertexHeightNoise§_Height§,:,VertexHeightNoise,:
@@ -43,8 +45,6 @@
 			
 			@Mods
 			{
-				@removePQSMods ^= : ::   // space
-				@removePQSMods ^= :	::   // tabulation
 				@removePQSMods ^= :PQS::
 				@removePQSMods ^= :Mod::
 				@removePQSMods ^= :_::
@@ -78,14 +78,14 @@
 			}
 			@Mods:HAS[#removePQSMods[*,VertexHeightMap,*]]
 			{
-				VertexHeightNoise
+				VertexHeightMap
 				{
 					name = _Height
 					index = 0
 					SigmaDimensions = 1
 					SigmaPlaceholder = 1
 				}
-				VertexHeightNoise
+				VertexHeightMap
 				{
 					name = _Height
 					index = 1
