--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Pol/Pol_DeletedMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Pol/Pol_DeletedMods.cfg
@@ -8,6 +8,8 @@
 			{
 				%removePQSMods = #,$../../Template/removePQSMods$,
 				@removePQSMods ^= /[\[\]']+/§
+				@removePQSMods ^= : ::		// remove all spaces
+				@removePQSMods ^= :	::		// remove all tabulations
 				
 				// Remove names of unique PQSMods
 		//@removePQSMods ^= :,PQSMod_VertexSimplexHeightAbsolute§_Height§,:,VertexSimplexHeightAbsolute,:
@@ -47,8 +49,6 @@
 			
 			@Mods
 			{
-				@removePQSMods ^= : ::   // space
-				@removePQSMods ^= :	::   // tabulation
 				@removePQSMods ^= :PQS::
 				@removePQSMods ^= :Mod::
 				@removePQSMods ^= :_::
