--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Eeloo/Eeloo_DeletedMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Eeloo/Eeloo_DeletedMods.cfg
@@ -8,6 +8,8 @@
 			{
 				%removePQSMods = #,$../../Template/removePQSMods$,
 				@removePQSMods ^= /[\[\]']+/§
+				@removePQSMods ^= : ::		// remove all spaces
+				@removePQSMods ^= :	::		// remove all tabulations
 				
 				// Remove names of unique PQSMods
 				@removePQSMods ^= :,PQSLandControl§_LandClass§,:,LandControl,:
@@ -26,8 +28,6 @@
 			
 			@Mods
 			{
-				@removePQSMods ^= : ::   // space
-				@removePQSMods ^= :	::   // tabulation
 				@removePQSMods ^= :PQS::
 				@removePQSMods ^= :Mod::
 				@removePQSMods ^= :_::
