--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Minmus/Minmus_DeletedMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Minmus/Minmus_DeletedMods.cfg
@@ -14,7 +14,7 @@
 				// Remove names of unique PQSMods
 				@removePQSMods ^= :,PQSMod_AltitudeAlpha§_Material_ModProjection§,:,AltitudeAlpha,:
 				@removePQSMods ^= :,PQSMod_VertexPlanet§VertexPlanet§,:,VertexPlanet,:
-				@removePQSMods ^= :,PQSLandControl§Scatter§,:,PQSLandControl,:
+				@removePQSMods ^= :,PQSLandControl§Scatter§,:,LandControl,:
 			}
 			
 			// Remove PQSMods by name
@@ -37,70 +37,20 @@
 					SigmaPlaceholder = 1
 				}
 			}
-			@Mods:HAS[#removePQSMods[*,VertexHeightMap,*]]
+			@Mods:HAS[#removePQSMods[*,VertexPlanet,*]]
 			{
-				VertexHeightMap
+				VertexPlanet
 				{
-					name = _Height
+					name = VertexPlanet
 					SigmaDimensions = 1
 					SigmaPlaceholder = 1
 				}
-			}
+			}			
 			@Mods:HAS[#removePQSMods[*,LandControl,*]]
 			{
 				LandControl
 				{
 					name = Scatter
-					SigmaDimensions = 1
-					SigmaPlaceholder = 1
-				}
-			}
-			@Mods:HAS[#removePQSMods[*,FlattenArea,*]]
-			{
-				FlattenArea
-				{
-					name = Monolith02
-					SigmaDimensions = 1
-					SigmaPlaceholder = 1
-				}
-				FlattenArea
-				{
-					name = Monolith01
-					SigmaDimensions = 1
-					SigmaPlaceholder = 1
-				}
-			}
-			@Mods:HAS[#removePQSMods[*,VertexSimplexHeight,*]]
-			{
-				VertexSimplexHeight
-				{
-					name = _HeightNoise
-					SigmaDimensions = 1
-					SigmaPlaceholder = 1
-				}
-			}
-			@Mods:HAS[#removePQSMods[*,VertexHeightNoiseVertHeight,*]]
-			{
-				VertexHeightNoiseVertHeight
-				{
-					name = _HeightNoise
-					SigmaDimensions = 1
-					SigmaPlaceholder = 1
-				}
-			}
-			@Mods:HAS[#removePQSMods[*,VoronoiCraters,*]]
-			{
-				VoronoiCraters
-				{
-					name = _HeightNoise
-					index = 0
-					SigmaDimensions = 1
-					SigmaPlaceholder = 1
-				}
-				VoronoiCraters
-				{
-					name = _HeightNoise
-					index = 1
 					SigmaDimensions = 1
 					SigmaPlaceholder = 1
 				}
