--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Duna/Duna_DeletedMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Duna/Duna_DeletedMods.cfg
@@ -123,6 +123,15 @@
 					SigmaPlaceholder = 1
 				}
 			}
+			@Mods:HAS[#removePQSMods[*,AerialPerspectiveMaterial,*]]
+			{
+				AerialPerspectiveMaterial
+				{
+					name = _Material_AerialPerspective
+					SigmaDimensions = 1
+					SigmaPlaceholder = 1
+				}
+			}
 			@Mods:HAS[#removePQSMods[*,MapDecal,*]]
 			{
 				MapDecal
