ground scatters fix

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/groundScatters.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/groundScatters.cfg
@@ -1,6 +1,6 @@
 @Kopernicus:FOR[SigDim2]
 {
-	@Body:HAS[@Template[Bop],~removeAllPQSMods[*],~removePQSMods[*LandControl*]]
+	@Body:HAS[@Template[Bop]:HAS[~removeAllPQSMods[*],~removePQSMods[*LandControl*]]]
 	{
 		%PQS
 		{
@@ -23,7 +23,7 @@
 			}
 		}
 	}
-	@Body:HAS[@Template[Duna],~removeAllPQSMods[*],~removePQSMods[*LandControl*]]
+	@Body:HAS[@Template[Duna]:HAS[~removeAllPQSMods[*],~removePQSMods[*LandControl*]]]
 	{
 		%PQS
 		{
@@ -54,7 +54,7 @@
 			}
 		}
 	}
-	@Body:HAS[@Template[Eeloo],~removeAllPQSMods[*],~removePQSMods[*LandControl*]]
+	@Body:HAS[@Template[Eeloo]:HAS[~removeAllPQSMods[*],~removePQSMods[*LandControl*]]]
 	{
 		%PQS
 		{
@@ -77,7 +77,7 @@
 			}
 		}
 	}
-	@Body:HAS[@Template[Eve],~removeAllPQSMods[*],~removePQSMods[*LandControl*]]
+	@Body:HAS[@Template[Eve]:HAS[~removeAllPQSMods[*],~removePQSMods[*LandControl*]]]
 	{
 		%PQS
 		{
@@ -100,7 +100,7 @@
 			}
 		}
 	}
-	@Body:HAS[@Template[Gilly],~removeAllPQSMods[*],~removePQSMods[*LandControl*]]
+	@Body:HAS[@Template[Gilly]:HAS[~removeAllPQSMods[*],~removePQSMods[*LandControl*]]]
 	{
 		%PQS
 		{
@@ -123,7 +123,7 @@
 			}
 		}
 	}
-	@Body:HAS[@Template[Ike],~removeAllPQSMods[*],~removePQSMods[*LandControl*]]
+	@Body:HAS[@Template[Ike]:HAS[~removeAllPQSMods[*],~removePQSMods[*LandControl*]]]
 	{
 		%PQS
 		{
@@ -146,7 +146,7 @@
 			}
 		}
 	}
-	@Body:HAS[@Template[Kerbin],~removeAllPQSMods[*],~removePQSMods[*LandControl*]]
+	@Body:HAS[@Template[Kerbin]:HAS[~removeAllPQSMods[*],~removePQSMods[*LandControl*]]]
 	{
 		%PQS
 		{
@@ -201,7 +201,7 @@
 			}
 		}
 	}
-	@Body:HAS[@Template[Laythe],~removeAllPQSMods[*],~removePQSMods[*LandControl*]]
+	@Body:HAS[@Template[Laythe]:HAS[~removeAllPQSMods[*],~removePQSMods[*LandControl*]]]
 	{
 		%PQS
 		{
@@ -224,7 +224,7 @@
 			}
 		}
 	}
-	@Body:HAS[@Template[Minmus],~removeAllPQSMods[*],~removePQSMods[*LandControl*]]
+	@Body:HAS[@Template[Minmus]:HAS[~removeAllPQSMods[*],~removePQSMods[*LandControl*]]]
 	{
 		%PQS
 		{
@@ -247,7 +247,7 @@
 			}
 		}
 	}
-	@Body:HAS[@Template[Mun],~removeAllPQSMods[*],~removePQSMods[*LandControl*]]
+	@Body:HAS[@Template[Mun]:HAS[~removeAllPQSMods[*],~removePQSMods[*LandControl*]]]
 	{
 		%PQS
 		{
@@ -270,7 +270,7 @@
 			}
 		}
 	}
-	@Body:HAS[@Template[Pol],~removeAllPQSMods[*],~removePQSMods[*LandControl*]]
+	@Body:HAS[@Template[Pol]:HAS[~removeAllPQSMods[*],~removePQSMods[*LandControl*]]]
 	{
 		%PQS
 		{
@@ -301,7 +301,7 @@
 			}
 		}
 	}
-	@Body:HAS[@Template[Tylo],~removeAllPQSMods[*],~removePQSMods[*LandControl*]]
+	@Body:HAS[@Template[Tylo]:HAS[~removeAllPQSMods[*],~removePQSMods[*LandControl*]]]
 	{
 		%PQS
 		{
@@ -324,7 +324,7 @@
 			}
 		}
 	}
-	@Body:HAS[@Template[Vall],~removeAllPQSMods[*],~removePQSMods[*LandControl*]]
+	@Body:HAS[@Template[Vall]:HAS[~removeAllPQSMods[*],~removePQSMods[*LandControl*]]]
 	{
 		%PQS
 		{
