--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Duna/Duna_DeletedMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Duna/Duna_DeletedMods.cfg
@@ -10,6 +10,7 @@
 				@removePQSMods ^= /[\[\]']+/§
 				@removePQSMods ^= : ::		// remove all spaces
 				@removePQSMods ^= :	::		// remove all tabulations
+				@removePQSMods ^= :;0§:§:
 				
 				// Remove names of unique PQSMods
 				@removePQSMods ^= :,PQSMod_VertexHeightMap§_Height§,:,VertexHeightMap,:
@@ -32,26 +33,26 @@
 					SigmaPlaceholder = 1
 				}
 			}
-		//	@Mods:HAS[#removePQSMods[*,PQSMod_VertexHeightNoiseVertHeightCurve2§_Height§,*]]
-		//	{
-		//		VertexHeightNoiseVertHeightCurve2
-		//		{
-		//			name = _Height
-		//			index = 1
-		//			SigmaDimensions = 1
-		//			SigmaPlaceholder = 1
-		//		}
-		//	}
-		//	@Mods:HAS[#removePQSMods[*,PQSMod_VertexHeightNoiseVertHeightCurve2§_Height§,*]]
-		//	{
-		//		VertexHeightNoiseVertHeightCurve2
-		//		{
-		//			name = _Height
-		//			index = 2
-		//			SigmaDimensions = 1
-		//			SigmaPlaceholder = 1
-		//		}
-		//	}
+			@Mods:HAS[#removePQSMods[*,PQSMod_VertexHeightNoiseVertHeightCurve2§_Height;1§,*]]
+			{
+				VertexHeightNoiseVertHeightCurve2
+				{
+					name = _Height
+					index = 1
+					SigmaDimensions = 1
+					SigmaPlaceholder = 1
+				}
+			}
+			@Mods:HAS[#removePQSMods[*,PQSMod_VertexHeightNoiseVertHeightCurve2§_Height;2§,*]]
+			{
+				VertexHeightNoiseVertHeightCurve2
+				{
+					name = _Height
+					index = 2
+					SigmaDimensions = 1
+					SigmaPlaceholder = 1
+				}
+			}
 			
 			
 			// Remove PQSMods by type
