--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Laythe/Laythe_DeletedMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Laythe/Laythe_DeletedMods.cfg
@@ -10,6 +10,7 @@
 				@removePQSMods ^= /[\[\]']+/§
 				@removePQSMods ^= : ::		// remove all spaces
 				@removePQSMods ^= :	::		// remove all tabulations
+				@removePQSMods ^= :;0§:§:
 				
 				// Remove names of unique PQSMods
 				@removePQSMods ^= :,PQSLandControl§_LandClass§,:,LandControl,:
@@ -32,16 +33,16 @@
 					SigmaPlaceholder = 1
 				}
 			}
-		//	@Mods:HAS[#removePQSMods[*,PQSMod_AerialPerspectiveMaterial§_Material_AerialPerspective§,*]]
-		//	{
-		//		AerialPerspectiveMaterial
-		//		{
-		//			name = _Material_AerialPerspective
-		//			index = 1
-		//			SigmaDimensions = 1
-		//			SigmaPlaceholder = 1
-		//		}
-		//	}
+			@Mods:HAS[#removePQSMods[*,PQSMod_AerialPerspectiveMaterial§_Material_AerialPerspective;1§,*]]
+			{
+				AerialPerspectiveMaterial
+				{
+					name = _Material_AerialPerspective
+					index = 1
+					SigmaDimensions = 1
+					SigmaPlaceholder = 1
+				}
+			}
 			
 			
 			// Remove PQSMods by type
