--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Mun/Mun_DeletedMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Mun/Mun_DeletedMods.cfg
@@ -10,6 +10,7 @@
 				@removePQSMods ^= /[\[\]']+/§
 				@removePQSMods ^= : ::		// remove all spaces
 				@removePQSMods ^= :	::		// remove all tabulations
+				@removePQSMods ^= :;0§:§:
 				
 				// Remove names of unique PQSMods
 				@removePQSMods ^= :,PQSMod_VertexHeightMap§_Height§,:,VertexHeightMap,:
@@ -50,16 +51,16 @@
 					SigmaPlaceholder = 1
 				}
 			}
-		//	@Mods:HAS[#removePQSMods[*,PQSMod_VoronoiCraters§_HeightNoise§,*]]
-		//	{
-		//		VoronoiCraters
-		//		{
-		//			name = _HeightNoise
-		//			index = 1
-		//			SigmaDimensions = 1
-		//			SigmaPlaceholder = 1
-		//		}
-		//	}
+			@Mods:HAS[#removePQSMods[*,PQSMod_VoronoiCraters§_HeightNoise;1§,*]]
+			{
+				VoronoiCraters
+				{
+					name = _HeightNoise
+					index = 1
+					SigmaDimensions = 1
+					SigmaPlaceholder = 1
+				}
+			}
 			
 			
 			// Remove PQSMods by type
