--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Pol/Pol_DeletedMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Pol/Pol_DeletedMods.cfg
@@ -10,12 +10,11 @@
 				@removePQSMods ^= /[\[\]']+/§
 				@removePQSMods ^= : ::		// remove all spaces
 				@removePQSMods ^= :	::		// remove all tabulations
+				@removePQSMods ^= :;0§:§:
 				
 				// Remove names of unique PQSMods
-		//@removePQSMods ^= :,PQSMod_VertexSimplexHeightAbsolute§_Height§,:,VertexSimplexHeightAbsolute,:
 				@removePQSMods ^= :,PQSMod_VertexHeightNoise§_Height§,:,VertexHeightNoise,:
 				@removePQSMods ^= :,PQSMod_FlattenOcean§_Height§,:,FlattenOcean,:
-		//@removePQSMods ^= :,PQSMod_VertexSimplexHeightAbsolute§_Height§,:,VertexSimplexHeightAbsolute,:
 				@removePQSMods ^= :,PQSMod_VertexHeightOffset§_Height§,:,VertexHeightOffset,:
 				@removePQSMods ^= :,PQSMod_AltitudeAlpha§_Material_ModProjection§,:,AltitudeAlpha,:
 				@removePQSMods ^= :,PQSLandControl§Scatter§,:,LandControl,:
@@ -33,16 +32,16 @@
 					SigmaPlaceholder = 1
 				}
 			}
-		//	@Mods:HAS[#removePQSMods[*,PQSMod_VertexSimplexHeightAbsolute§_Height§,*]]
-		//	{
-		//		VertexSimplexHeightAbsolute
-		//		{
-		//			name = _Height
-		//			index = 1
-		//			SigmaDimensions = 1
-		//			SigmaPlaceholder = 1
-		//		}
-		//	}
+			@Mods:HAS[#removePQSMods[*,PQSMod_VertexSimplexHeightAbsolute§_Height;1§,*]]
+			{
+				VertexSimplexHeightAbsolute
+				{
+					name = _Height
+					index = 1
+					SigmaDimensions = 1
+					SigmaPlaceholder = 1
+				}
+			}
 			
 			
 			// Remove PQSMods by type
