--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Vall/Vall_DeletedMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Vall/Vall_DeletedMods.cfg
@@ -10,6 +10,7 @@
 				@removePQSMods ^= /[\[\]']+/§
 				@removePQSMods ^= : ::   // space
 				@removePQSMods ^= :	::   // tabulation
+				@removePQSMods ^= :;0§:§:
 				
 				// Remove names of unique PQSMods
 				@removePQSMods ^= :,PQSMod_VertexHeightNoise§_Height§,:,VertexHeightNoise,:
@@ -29,12 +30,32 @@
 					SigmaPlaceholder = 1
 				}
 			}
+			@Mods:HAS[#removePQSMods[*,PQSMod_VertexSimplexHeightAbsolute§_Height;1§,*]]
+			{
+				VertexSimplexHeightAbsolute
+				{
+					name = _Height
+					index = 1
+					SigmaDimensions = 1
+					SigmaPlaceholder = 1
+				}
+			}
 			@Mods:HAS[#removePQSMods[*,PQSMod_VertexHeightMap§_Height§,*]]
 			{
 				VertexHeightMap
 				{
 					name = _Height
 					index = 0
+					SigmaDimensions = 1
+					SigmaPlaceholder = 1
+				}
+			}
+			@Mods:HAS[#removePQSMods[*,PQSMod_VertexHeightMap§_Height;1§,*]]
+			{
+				VertexHeightMap
+				{
+					name = _Height
+					index = 1
 					SigmaDimensions = 1
 					SigmaPlaceholder = 1
 				}
