--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Eeloo/Eeloo_DeletedMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Eeloo/Eeloo_DeletedMods.cfg
@@ -10,6 +10,7 @@
 				@removePQSMods ^= /[\[\]']+/§
 				@removePQSMods ^= : ::		// remove all spaces
 				@removePQSMods ^= :	::		// remove all tabulations
+				@removePQSMods ^= :;0§:§:
 				
 				// Remove names of unique PQSMods
 				@removePQSMods ^= :,PQSLandControl§_LandClass§,:,LandControl,:
