--- a/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
@@ -87,7 +87,7 @@
 				}
 				@AerialPerspectiveMaterial,*
 				{
-					@atmosphereDepth *= #$../../../SigmaDimensions/Resize$
+					@atmosphereDepth *= #$../../../SigmaDimensions/Atmosphere$
 				}
 				@VertexHeightMap,*
 				{
