--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -93,6 +93,8 @@
 			
 			// temperature ASL
 			
+			@temperatureSeaLevel *= #$../SigmaDimensions/tempASL$
+			
 			@temperatureCurve
 			{
 				@key,* ^= :$: 0 0 0 x:
