--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Jool/Jool_Atmosphere.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Jool/Jool_Atmosphere.cfg
@@ -9,6 +9,9 @@
 		}
 		@Atmosphere
 		{
+			
+			&temperatureSeaLevel = 200
+			
 			%pressureCurve {}
 			%temperatureCurve {}
 			%temperatureSunMultCurve {}
