--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Duna.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Duna.cfg
@@ -185,7 +185,7 @@
 		ScaledVersion
 		{
 			type = Atmospheric
-			fadeStart = 0
+			fadeStart = 95000
 			fadeEnd = 97000
 			sphericalModel = False
 			deferMesh = False
@@ -208,7 +208,7 @@
 				rimColorRamp = BUILTIN/desert_atmogradient
 				rimColorRampScale = 1,1
 				rimColorRampOffset = 0,0
-				localLightDirection = 0.001595139,0,0.9999988,0
+				localLightDirection = 0.007757901,-1.304649E-07,0.9999699,0
 				resourceMapScale = 1,1
 				resourceMapOffset = 0,0
 			}
