--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Jool.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Jool.cfg
@@ -151,7 +151,7 @@
 		ScaledVersion
 		{
 			type = Atmospheric
-			fadeStart = 0
+			fadeStart = 29000
 			fadeEnd = 30000
 			sphericalModel = False
 			deferMesh = False
@@ -174,7 +174,7 @@
 				rimColorRamp = BUILTIN/gas1_atmogradiant
 				rimColorRampScale = 1,1
 				rimColorRampOffset = 0,0
-				localLightDirection = -0.9999988,0,0.001599908,0
+				localLightDirection = -0.9999092,-1.304649E-07,0.01347863,0
 				resourceMapScale = 1,1
 				resourceMapOffset = 0,0
 			}
