--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Sun.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Sun.cfg
@@ -155,6 +155,27 @@
 					key = 38.56295 1.82142 0.0001713 0.0001713
 				}
 			}
+			Coronas
+			{
+				Corona
+				{
+					scaleSpeed = 0.007
+					scaleLimitY = 5
+					scaleLimitX = 5
+					updateInterval = 5
+					speed = -1
+					rotation = 0
+				}
+				Corona
+				{
+					scaleSpeed = 0.009
+					scaleLimitY = 5
+					scaleLimitX = 5
+					updateInterval = 5
+					speed = 1
+					rotation = 0
+				}
+			}
 		}
 		Particles
 		{
